--- a/ajaxAttempt/src/main/webapp/axiosTest.html
+++ b/ajaxAttempt/src/main/webapp/axiosTest.html
@@ -11,12 +11,12 @@
 
 <script>
     //1. get
-   /* axios({
+    axios({
         method:"get",
         url:"http://localhost:8080/ajaxAttempt/testResp?username=zhangsan"
     }).then(function (resp) {
         alert(resp.data);
-    })*/
+    })
 
 
     //2. post
@@ -27,10 +27,6 @@
     }).then(function (resp) {
         alert(resp.data);
     })
-
-
-
-
 </script>
 
 </body>
