--- a/ajaxAttempt/src/main/webapp/vueTest.html
+++ b/ajaxAttempt/src/main/webapp/vueTest.html
@@ -92,6 +92,9 @@
             return {
                 students: ["张三", "李四", "王五"]
             }
+        },
+        mounted(){
+            alert("加载完成")
         }
     })
 </script>
