--- a/ajaxAttempt/src/main/webapp/index.html
+++ b/ajaxAttempt/src/main/webapp/index.html
@@ -14,6 +14,12 @@
     <p><a href="StudentsAxios/selectAllStu.html">
         <button class="button_press">查询所有</button>
     </a></p>
+    <p><a href="StudentsAxios/queryStudent2.html">
+        <button class="button_press">查询所有VUE+Axios</button>
+    </a></p>
+    <p><a href="StudentsAxios/insertStudent2.html">
+        <button class="button_press">添加学生VUE+Axios</button>
+    </a></p>
     <p><a href="StudentsAxios/addStudent.html">
         <button class="button_press">添加学生</button>
     </a></p>
