--- a/studentManage2/src/main/webapp/index.html
+++ b/studentManage2/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="myIndexDiv">
     <p><a href="plentiful/operate.html">
-        <button class="button_press">学生操作页面</button>
+        <button class="button_press">操作页面</button>
     </a></p>
 
 </div>
