--- a/studentManage2/src/main/webapp/index.html
+++ b/studentManage2/src/main/webapp/index.html
@@ -2,15 +2,19 @@
 <html lang="zn">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>学生管理系统</title>
     <link href="css/index_style.css" rel="stylesheet">
 </head>
 <body>
 <div id="myIndexDiv">
-    <p><a href="plentiful/operate.html">
-        <button class="button_press">操作页面</button>
-    </a></p>
-
+    <h2>学生管理系统2.0</h2>
+    <a href="plentiful/operate.html">
+        <button>分页查询</button>
+    </a>
+    <br>
+    <a href="plentiful/lookAll.html">
+        <button>查询所有</button>
+    </a>
 </div>
 </body>
 </html>
