--- a/studentManage2/src/main/webapp/plentiful/operate.html
+++ b/studentManage2/src/main/webapp/plentiful/operate.html
@@ -128,8 +128,7 @@
         </el-table>
     </template>
     <!-- 分页工具条 -->
-    <el-pagination @size-change=" handleSizeChange
-                    "
+    <el-pagination @size-change=" handleSizeChange"
                    @current-change="handleCurrentChange"
                    :current-page.sync="pageSeparate.currentPage1"
                    :page-sizes="[5, 7, 9, 12]"
