--- a/studentManage2/src/main/webapp/index.html
+++ b/studentManage2/src/main/webapp/index.html
@@ -8,6 +8,14 @@
 <body>
 <div id="myIndexDiv">
     <h2>学生管理系统2.0</h2>
+    <a href="loginPage/userLogin.html">
+        <button>登录</button>
+    </a>
+    <br>
+    <a href="loginPage/register.html">
+        <button>注册</button>
+    </a>
+    <br>
     <a href="plentiful/operate.html">
         <button>分页查询</button>
     </a>
