--- a/studentManage2/src/main/webapp/plentiful/lookAll.html
+++ b/studentManage2/src/main/webapp/plentiful/lookAll.html
@@ -172,7 +172,7 @@
             };
         },
         methods: {
-            tableRowClassName({row, rowIndex}) {
+            tableRowClassName({rowIndex}) {
                 if (rowIndex % 4 === 1) {
                     return 'warning-row';
                 } else if (rowIndex % 4 === 3) {
@@ -182,9 +182,6 @@
             },
             handleSelectionChange(val) {
                 this.multipleSelection = val;
-            },
-            onSubmit() {
-                this.selectAll();
             },
             selectChoose(val) {
                 const _this = this
