--- a/studentManage2/src/main/webapp/index.html
+++ b/studentManage2/src/main/webapp/index.html
@@ -9,19 +9,19 @@
 <div id="myIndexDiv">
     <h2>学生管理系统2.0</h2>
     <a href="loginPage/userLogin.html">
-        <button>登录</button>
+        <button class="login">登录</button>
     </a>
     <br>
     <a href="loginPage/register.html">
-        <button>注册</button>
+        <button class="login">注册</button>
     </a>
     <br>
     <a href="plentiful/operate.html">
-        <button>分页查询</button>
+        <button class="manage">分页查询</button>
     </a>
     <br>
     <a href="plentiful/lookAll.html">
-        <button>查询所有</button>
+        <button class="manage">查询所有</button>
     </a>
 </div>
 </body>
