--- a/studentManage2/src/main/webapp/index.html
+++ b/studentManage2/src/main/webapp/index.html
@@ -8,20 +8,16 @@
 <body>
 <div id="myIndexDiv">
     <h2>学生管理系统2.0</h2>
-    <a href="loginPage/userLogin.html">
-        <button class="login">登录</button>
-    </a>
-    <br>
-    <a href="loginPage/register.html">
-        <button class="login">注册</button>
+    <a href="gate.html">
+        <button>登录注册</button>
     </a>
     <br>
     <a href="plentiful/operate.html">
-        <button class="manage">分页查询</button>
+        <button>分页查询</button>
     </a>
     <br>
     <a href="plentiful/lookAll.html">
-        <button class="manage">查询所有</button>
+        <button>查询所有</button>
     </a>
 </div>
 </body>
