--- a/ajaxAttempt/src/main/webapp/StudentsAxios/queryStudent2.html
+++ b/ajaxAttempt/src/main/webapp/StudentsAxios/queryStudent2.html
@@ -56,7 +56,7 @@
         },
         mounted(){
             // 页面加载完成后，发送异步请求，查询数据
-            var _this = this;
+            const _this = this;
             axios({
                 method:"post",
                 url:"http://localhost:8080/ajaxAttempt/Students/students"
