--- a/studentManage2/src/main/webapp/gate.html
+++ b/studentManage2/src/main/webapp/gate.html
@@ -94,6 +94,7 @@
         },
         mounted() {
             this.getCookie()
+            check_code()
         },
         methods: {
             //获取cookie
