--- a/studentManage2/src/main/webapp/plentiful/lookAll.html
+++ b/studentManage2/src/main/webapp/plentiful/lookAll.html
@@ -188,6 +188,17 @@
                 if (val === 2) {
                     _this.selectTitle = "修改学生"
                 } else if (val === 1) {
+                    _this.student= {
+                        id: '',
+                            studentName: '',
+                            sex: '',
+                            englishGrade: '',
+                            mathGrade: '',
+                            societyId: '',
+                            height: '',
+                            birthday: '',
+                            money: ''
+                    }
                     _this.selectTitle = "添加学生"
                 }
                 _this.dialogFormVisible = true
