--- a/experiment/studentsMVC3/src/main/webapp/pages/student.html
+++ b/experiment/studentsMVC3/src/main/webapp/pages/student.html
@@ -3,10 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>分页查询</title>
+  <title>查询所有</title>
   <style>
     a {
       text-decoration: none;
+    }
+
+    .el-table .warning-row {
+      background: oldlace;
+    }
+
+    .el-table .success-row {
+      background: #f0f9eb;
     }
   </style>
 </head>
@@ -14,35 +22,16 @@
 <body>
 <div id="app">
   <el-menu
-          default-active="2"
+          default-active="3"
           mode="horizontal"
           background-color="#409EFF"
           text-color="#fff"
           active-text-color="#ffd04b">
     <el-menu-item index="1"><a href="../index.html">回到首页</a></el-menu-item>
-    <el-menu-item index="2">分页查询</el-menu-item>
-    <el-menu-item index="3"><a href="lookAll.html">查询所有</a></el-menu-item>
+    <el-menu-item index="2"><a href="operate.html">分页查询</a></el-menu-item>
+    <el-menu-item index="3">查询所有</el-menu-item>
   </el-menu>
   <br>
-  <!-- 表单 -->
-  <el-form :inline="true" :model="pageSeparate" class="demo-form-inline">
-    <el-form-item label="学生">
-      <el-input v-model="pageSeparate.studentName" autocomplete="off" placeholder="学生姓名"></el-input>
-    </el-form-item>
-    <el-form-item label="社团">
-      <el-select v-model="pageSeparate.societyId" clearable placeholder="社团">
-        <el-option
-                v-for="item in options"
-                :key="item.value"
-                :label="item.label"
-                :value="item.value">
-        </el-option>
-      </el-select>
-    </el-form-item>
-    <el-form-item>
-      <el-button type="primary" @click="onSubmit" plain>查询</el-button>
-    </el-form-item>
-  </el-form>
   <!-- 按钮 -->
   <el-button type="danger" @click="deleteByIds" plain>批量删除</el-button>
   <el-button type="primary" @click="selectChoose(1)" plain>添加学生</el-button>
@@ -95,27 +84,28 @@
   </el-dialog>
   <!-- 表格 -->
   <template>
-    <el-table :data="students" Iteme stripe style="width: 100%" highlight-current-row
-              @selection-change="handleSelectionChange">
+    <el-table :data="students" Iteme height="500" style="width: 100%" highlight-current-row
+              @selection-change="handleSelectionChange" :row-class-name="tableRowClassName"
+              :default-sort="{prop: 'societyName', order: 'descending'}">
       <el-table-column type="selection">
       </el-table-column>
       <el-table-column prop="id" align="center" width="50px" label="学号">
       </el-table-column>
-      <el-table-column prop="studentName" align="center" label="姓名">
+      <el-table-column prop="studentName" align="center" sortable label="姓名">
       </el-table-column>
-      <el-table-column prop="sex" align="center" label="性别">
+      <el-table-column prop="sex" align="center" sortable label="性别">
       </el-table-column>
-      <el-table-column prop="englishGrade" align="center" label="英语">
+      <el-table-column prop="englishGrade" align="center" sortable label="英语">
       </el-table-column>
-      <el-table-column prop="mathGrade" align="center" label="数学">
+      <el-table-column prop="mathGrade" align="center" sortable label="数学">
       </el-table-column>
-      <el-table-column prop="societyName" align="center" label="社团">
+      <el-table-column prop="societyName" align="center" sortable label="社团">
       </el-table-column>
-      <el-table-column prop="height" align="center" label="身高">
+      <el-table-column prop="height" align="center" sortable label="身高">
       </el-table-column>
-      <el-table-column prop="birthday" align="center" label="生日">
+      <el-table-column prop="birthday" align="center" sortable label="生日">
       </el-table-column>
-      <el-table-column prop="money" align="center" label="钱">
+      <el-table-column prop="money" align="center" sortable label="钱">
       </el-table-column>
       <el-table-column type="index" width="40px">
       </el-table-column>
@@ -127,14 +117,6 @@
       </el-table-column>
     </el-table>
   </template>
-  <!-- 分页工具条 -->
-  <el-pagination @size-change=" handleSizeChange"
-                 @current-change="handleCurrentChange"
-                 :current-page.sync="pageSeparate.currentPage1"
-                 :page-sizes="[5, 7, 9, 12]"
-                 :page-size="pageSeparate.pageItem"
-                 layout="total,sizes,prev, pager, next" :total="totalItem">
-  </el-pagination>
 </div>
 
 <script src="../js/axios-0.18.0.js"></script>
@@ -145,7 +127,7 @@
   new Vue({
     el: "#app",
     mounted() {
-      this.selectByPage()
+      this.selectAll()
     },
     data() {
       return {
@@ -187,24 +169,19 @@
           money: ''
         },
         formLabelWidth: '120px',
-        // 分页数据
-        totalItem: 50,
-        pageSeparate: {
-          studentName: '',
-          societyId: '',
-          currentPage1: 1,
-          pageItem: 7
-        }
       };
     },
     methods: {
+      tableRowClassName({rowIndex}) {
+        if (rowIndex % 4 === 1) {
+          return 'warning-row';
+        } else if (rowIndex % 4 === 3) {
+          return 'success-row';
+        }
+        return '';
+      },
       handleSelectionChange(val) {
         this.multipleSelection = val;
-      },
-      onSubmit() {
-        this.pageSeparate.currentPage1 = 1
-        this.selectByPage();
-        console.log(this.pageSeparate);
       },
       selectChoose(val) {
         const _this = this
@@ -224,15 +201,14 @@
         }
         _this.dialogFormVisible = false
       },
-      selectByPage() {
+      selectAll() {
         // 页面加载完成后，发送异步请求，查询查询部分学生
         axios({
           method: "post",
-          url: "http://localhost:8080/studentManage2/manager/selectPage",
-          data: this.pageSeparate
+          url: "http://localhost:8080/studentManage2/manager/selectAll",
+          data: this.students
         }).then(resp => {
-          this.students = resp.data.rows;
-          this.totalItem = resp.data.totalItem;
+          this.students = resp.data;
         })
       },
       addStudent() {
@@ -245,8 +221,7 @@
           // 判断响应数据是否为 YES
           if (resp.data === "YES") {
             this.open2("添加成功")
-            this.pageSeparate.currentPage1 = 1
-            this.selectByPage()
+            this.selectAll()
           } else if (resp.data === "NO") {
             this.open4("插入失败")
           }
@@ -268,7 +243,7 @@
           // 判断响应数据是否为 YES
           if (resp.data === "YES") {
             this.open2("批量删除成功")
-            this.selectByPage()
+            this.selectAll()
           } else if (resp.data === "NO") {
             this.open4("批量删除失败")
           }
@@ -293,7 +268,7 @@
         }).then(resp => {
           if (resp.data === "YES") {
             this.open2("修改成功")
-            this.selectByPage()
+            this.selectAll()
           } else if (resp.data === "NO") {
             this.open4("修改失败")
           }
@@ -308,7 +283,7 @@
         }).then(resp => {
           if (resp.data === "YES") {
             this.open2("删除成功")
-            this.selectByPage()
+            this.selectAll()
           } else if (resp.data === "NO") {
             this.open4("删除失败")
           }
@@ -322,14 +297,6 @@
       handleDel(row) {
         this.studentID = row.id
         this.deleteById()
-      },
-      handleSizeChange(val) {
-        this.pageSeparate.pageItem = val
-        this.selectByPage()
-      },
-      handleCurrentChange(val) {
-        this.pageSeparate.currentPage1 = val
-        this.selectByPage()
       },
       open2(val) {
         this.$message({
