--- a/experiment/out-docx/src/main/resources/static/index.html
+++ b/experiment/out-docx/src/main/resources/static/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>测试文件下载</title>
-    <script src="https://cdn.bootcdn.net/ajax/libs/axios/1.3.6/axios.min.js"></script>
     <style>
         label {
             color: blueviolet;
@@ -39,23 +38,20 @@
                 return
             }
         }
-        axios({
-            method: 'post',
-            url: '/downloadDoc',
-            data: param,
-            responseType: 'blob',  // 表示接收二进制流文件
-        }).then((res) => {
+        fetch('/downloadDoc', {
+            method: 'POST', /* or 'PUT' */
+            headers: {'Content-Type': 'application/json',},
+            body: JSON.stringify(param)
+        }).then(resp => resp.json()).then((res) => {
             const link = document.createElement('a')
             let blob = new Blob([res.data], {type: 'application/vnd.openxmlformats-officedocument.wordprocessingml.document'})
             link.style.display = 'none'
             link.href = URL.createObjectURL(blob)
-            link.download = document.getElementById("fileNa").value + '.docx'  // 下载的文件名
+            link.download = document.getElementById("fileNa").value + '.docx'  /* 下载的文件名 */
             document.body.appendChild(link)
             link.click()
             document.body.removeChild(link)
-        }).catch((error) => {
-            console.error(error)
-        })
+        }).catch((error) => console.error(error))
     }
 </script>
 </html>
