--- a/experiment/chat/src/main/resources/static/main.html
+++ b/experiment/chat/src/main/resources/static/main.html
@@ -56,6 +56,7 @@
         ws.onmessage = function (ev) {
             const dataStr = ev.data;
             const res = JSON.parse(dataStr);
+            console.log("收到消息", res)
             //判断是否是系统消息
             if (res["isSystem"]) {
                 //好友列表,系统广播
