--- a/experiment/chat/src/main/resources/static/index.html
+++ b/experiment/chat/src/main/resources/static/index.html
@@ -7,24 +7,36 @@
 </head>
 <body>
 <div id="login-form">
-    <label for="user">账号：</label>
+    <label for="user">账号</label>
     <input type="text" name="user" id="user">
-    <button type="button" id="btn">登录</button>
-    <p id="err_msg"></p>
+    <img id="touZi" src="favicon.ico" alt="骰子">
+    <div id="container">
+        <div id="chatDiv">在线聊天页面</div>
+        <div id="fileDiv">文件上传下载</div>
+    </div>
 </div>
 <script src="js/jquery-3.6.3.min.js"></script>
 <script>
+    "use strict";
     window.onload = () => {
+        randomName()
+    }
+
+    const randomName = () => {
         $.get("/getRandomName", res => {
             $("#user").val(res)
         });
     }
 
-    $("#btn").click(function () {
+    $("#chatDiv").click(function () {
         $.get("/toLogin?user=" + $("#user").val(), function (res) {
             if (res["flag"]) location.href = "main.html";
-            else $("#err_msg").html(res.message);
+            else alert(res["msg"]);
         }, "json");
+    })
+
+    $("#touZi").click(() => {
+        randomName();
     })
 </script>
 </body>
